Fix twitter lists fetching

Regression introduced by 44c549a66

BUG: 382392